<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".SplashScreen">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_above="@id/btn_exitSplash"
        android:id="@+id/textContainer">

    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:paddingTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textSize="60sp"
        android:alpha="0"
        android:id="@+id/welcome"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_a_look_around"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/welcome"
        android:id="@+id/subtitle"
        android:alpha="0"
        android:textSize="20sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"
        android:alpha="0"
        android:text="@string/send_a_message"
        android:id="@+id/btn_exitSplash"
        android:clickable="false"

        />
    <!--android:visibility="gone"-->
</RelativeLayout>